# wadamesh

./: platformio.ini
deploy/: README.md  tile-transcode.py
deploy/nginx/: flasher.wadamesh.com.conf  tiles.wadamesh.com.conf
deploy/site/: index.html  manifest-heltec-v4-tft.json  manifest-tdeck.json
deploy/tanmatsu-app/com.wadamesh.wadamesh/: README.md  metadata.json
release-notes/: beta_12.txt  beta_14.txt  beta_18.txt  beta_19.txt  beta_8.txt
scripts/: release.sh  tanmatsu-appstore-publish.sh  test_companion_serial.py
src/: AbstractUITask.h  DataStore.cpp  MyMesh.cpp  MyMesh.h  main.cpp  wadamesh_mark_rgb.h
src/helpers/esp32/: TouchPrefsStore.cpp  TouchPrefsStore.h
src/ui-touch/: KeyboardLayouts.cpp  KeyboardLayouts.h  UITask.cpp  UITask.h  emoji_data.c  emoji_data.h  zoom_font.c
tanmatsu/main/: CMakeLists.txt  main.cpp
tanmatsu/sdkconfigs/: wadamesh
